@@ -49,7 +49,7 @@ namespace Gtk
 {
 
 //Allow the generated code to work without the prefix:
-typedef RecentChooser::ArrayHandle_RecentInfos ArrayHandle_RecentInfos;
+typedef RecentChooser::ListHandle_RecentInfos ListHandle_RecentInfos;
 
 void RecentChooser::set_sort_func(const SlotCompare& slot)
 {
