@@ -91,24 +91,10 @@ public:
   _WRAP_METHOD(void select_all(), gtk_recent_chooser_select_all)
   _WRAP_METHOD(void unselect_all(), gtk_recent_chooser_unselect_all)
 
-#ifndef DOXYGEN_SHOULD_SKIP_THIS
-  struct RecentInfoTraits
-  {
-    typedef Glib::RefPtr<RecentInfo> CppType;
-    typedef const GtkRecentInfo* CType;
-    typedef GtkRecentInfo* CTypeNonConst;
+  typedef Glib::ListHandle<RecentInfo, RecentInfoTraits> ListHandle_RecentInfos;
+  _CONVERSION(`GList*',`ListHandle_RecentInfos',__FL2H_SHALLOW)
 
-    static CType to_c_type(const CppType& obj) { return Glib::unwrap(obj); }
-    static CType to_c_type(const CType& obj) { return obj; }
-    static CppType to_cpp_type(const CType& obj) { return Glib::wrap(const_cast<CTypeNonConst>(obj), true); }
-    static void release_c_type(const CType& /* obj */) { /* gtk_recent_info_unref(const_cast<CTypeNonConst>(obj)); */}
-  };
-#endif
-
-  typedef Glib::ListHandle<RecentInfo, RecentInfoTraits> ArrayHandle_RecentInfos;
-  _CONVERSION(`GList*',`ArrayHandle_RecentInfos',__FL2H_SHALLOW)
-
-  _WRAP_METHOD(ArrayHandle_RecentInfos get_items() const, gtk_recent_chooser_get_items)
+  _WRAP_METHOD(ListHandle_RecentInfos get_items() const, gtk_recent_chooser_get_items)
 
   /** Gets the URI of the recently used resources.
    *
@@ -158,7 +144,7 @@ protected:
 #m4end
   // TODO: How to wrap those vfuncs?
 
-  //_CONVERSION(`ArrayHandle_RecentInfos', `GList*', `($3).data()')
+  //_CONVERSION(`ListHandle_RecentInfos', `GList*', `($3).data()')
   //_CONVERSION(`Glib::SListHandle<RecentFilter*>', `GSList*', `($3).data()')
 
   //_WRAP_VFUNC(bool set_current_uri(const Glib::ustring& uri), "set_current_uri", errthrow)
