@@ -43,4 +43,9 @@ Glib::StringArrayHandle RecentInfo::get_groups() const
   return Glib::StringArrayHandle(gtk_recent_info_get_groups(const_cast<GtkRecentInfo*>(this->gobj()), 0));
 }
 
+RecentInfoTraits::CppType RecentInfoTraits::to_cpp_type(const CType& obj)
+{
+  return Glib::wrap(const_cast<CTypeNonConst>(obj), true);
+}
+
 } // namespace Gtk
