@@ -78,6 +78,22 @@ public:
   //_WRAP_METHOD(bool match(const RecentInfo& b) const, gtk_recent_info_match)
 };
 
+
+#ifndef DOXYGEN_SHOULD_SKIP_THIS
+
+struct RecentInfoTraits
+{
+  typedef Glib::RefPtr<RecentInfo> CppType;
+  typedef const GtkRecentInfo* CType;
+  typedef GtkRecentInfo* CTypeNonConst;
+
+  static CType to_c_type(const CppType& obj) { return Glib::unwrap(obj); }
+  static CType to_c_type(const CType& obj) { return obj; }
+  static CppType to_cpp_type(const CType& obj); //Implemented in the .cpp file
+  static void release_c_type(const CType& /* obj */) { /* gtk_recent_info_unref(const_cast<CTypeNonConst>(obj)); */}
+};
+#endif
+
 //TODO: We normally put these inside the class:
 
 /** @relates Gtk::RecentInfo */
