@@ -17,3 +17,11 @@
 
 #include <gtk/gtkrecentmanager.h>
 #include <gtk/gtktypebuiltins.h>
+
+namespace Gtk
+{
+
+//Allow the generated code to work without the prefix:
+typedef RecentManager::ListHandle_RecentInfos ListHandle_RecentInfos;
+
+} //namespace Gtk
