@@ -78,7 +78,11 @@ public:
   _WRAP_METHOD(void set_limit(int limit), gtk_recent_manager_set_limit)
   _WRAP_METHOD(int get_limit() const, gtk_recent_manager_get_limit)
 
-  _WRAP_METHOD(Glib::ListHandle< Glib::RefPtr<RecentInfo> > get_items() const, gtk_recent_manager_get_items)
+  typedef Glib::ListHandle<RecentInfo, RecentInfoTraits> ListHandle_RecentInfos;
+  _CONVERSION(`GList*',`ListHandle_RecentInfos',__FL2H_SHALLOW)
+
+  _WRAP_METHOD(ListHandle_RecentInfos get_items() const, gtk_recent_manager_get_items)
+
   _WRAP_METHOD(int purge_items(), gtk_recent_manager_purge_items, errthrow)
 
   /// For instance, void on_changed();
