@@ -1,3 +1,14 @@
+2006-08-01  Murray Cumming  <murrayc@murrayc.com>
+
+	* gtk/src/recentchooser.ccg:
+	* gtk/src/recentchooser.hg:
+	* gtk/src/recentinfo.ccg:
+	* gtk/src/recentinfo.hg:
+	* gtk/src/recentmanager.ccg:
+	* gtk/src/recentmanager.hg: Move RecentInfoTraits into recentinfo.hg, and 
+	use it for RecentManager::get_items() as well as the existing 
+	RecentChooser::get_items().
+
 2006-07-30  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtk/src/recentchooser.ccg:
